--- a/plugins/org.eclipse.datatools.connectivity.oda.flatfile/about.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.flatfile/about.html
@@ -22,7 +22,7 @@ Check the Redistributor's license that was provided with the Content.
 If no such license exists, contact the Redistributor. Unless otherwise indicated below, the terms and conditions of the EPL 
 still apply to any source code in the Content. <p>
 
-<H3>Redistributed Content</H3>
+<H3>Third Party Content</H3>
 <p>The Content includes items that have been sourced from third parties as 
 follows:</p>
 
