--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/package.html
@@ -4,22 +4,23 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2004, 2005 Actuate Corporation.
+ * Copyright (c) 2004, 2006 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
  * http://www.eclipse.org/legal/epl-v10.html
  *
  * Contributors:
- *  Actuate Corporation  - initial API and implementation
+ *  Actuate Corporation - initial API and implementation
  *  
  *************************************************************************
 
 -->
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
 <body bgcolor="white">
 
-Provides utility components for the development of Open Data Access (ODA) 
+[<b>Experimental</b>] Provides utility components for the development of Open Data Access (ODA) 
 consumers and providers.  This package includes functionalities that 
 are commonly needed by both ODA providers and consumers, such as
 accessing the content of an ODA data source extension's manifest,
