--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/designsession/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/designsession/package.html
@@ -20,14 +20,14 @@
 </head>
 <body bgcolor="white">
 
-[<b>Provisional</b>] Provides an utility component that provides the services
+[<b>Experimental</b>] Provides an utility component that provides the services
 to handle the DTP ODA Design Session Model API objects.
 <br>
 It can be used by an ODA consumer and/or a data provider
 in their use of an ODA design session.
 <p>
 This package API is going through iterative development cycles,
-and will likely change in the near future.
+and will likely change.
 
 <!-- Put @see and @since tags down here. -->
 @since 3.0
