[121885] Fixed state of API declared.

--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/manifest/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/manifest/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Provisional</b>] Provides an utility component for accessing the content of an 
+[<b>Experimental</b>] Provides an utility component for accessing the content of an 
 ODA data source UI extension's manifest.
 <br>
 It can be used by an ODA consumer and/or a data provider
