--- a/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/wizards/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design.ui/src/org/eclipse/datatools/connectivity/oda/design/ui/wizards/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2004, 2006 Actuate Corporation.
+ * Copyright (c) 2006 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,16 +20,14 @@
 </head>
 <body bgcolor="white">
 
-[<b>Experimental</b>] Contains the base classes for extension of the
-data source/data set wizard and property page
+[<b>Provisional</b>] Contains the base classes for extending the
+data source wizard and property pages, and 
+data set wizard and property pages
 in the Open Data Access (ODA) Designer UI framework.
 <br>
-It is for use by an ODA data provider to extend
-and provide customized designer tool to define a data set design,
-or a data source design associated with a connection profile instance.
-<p>
-This package API is going through iterative development cycles,
-and will likely change.
+These classes are for use by an ODA data provider to extend
+and contribute customized designer tool to define a data set design,
+and a data source design associated with a connection profile instance.
 
 <!-- Put @see and @since tags down here. -->
 @since 3.0
