[131869] Migrated embedded resource messages to OSGi NLS message bundles

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/util/package.html
@@ -20,7 +20,7 @@
 </head>
 <body bgcolor="white">
 
-[<b>Experimental</b>] Provides utility components for the development of Open Data Access (ODA) 
+[<b>Provisional</b>] Provides utility components for the development of Open Data Access (ODA) 
 consumers and providers.  This package includes functionalities that 
 are commonly needed by both ODA providers and consumers, such as
 accessing the content of an ODA data source extension's manifest,
