--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/schema-doc/org_eclipse_datatools_connectivity_oda_consumer_driverBridge.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/schema-doc/org_eclipse_datatools_connectivity_oda_consumer_driverBridge.html
@@ -3,7 +3,7 @@
 <HEAD><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>DTP ODA Consumer Helper Driver Bridge</title>
 <style>@import url("file:/D:/Lang/eclipse_32M5a/plugins/org.eclipse.sdk_3.2.0.v20060214/book.css");</style>
-<style>@import url("file:/D:/Lang/eclipse_32M5a/configuration/org.eclipse.osgi/bundles/192/1/.cp/schema.css");</style>
+<style>@import url("file:/D:/Lang/eclipse_32M5a/configuration/org.eclipse.osgi/bundles/143/1/.cp/schema.css");</style>
 </HEAD>
 <BODY>
 <H1><CENTER>DTP ODA Consumer Helper Driver Bridge</CENTER></H1>
@@ -13,7 +13,7 @@
 <p></p>
 
 <p>
-<h6 class=CaptionFigColumn id=header>Description: </h6>This ODA consumer helper component's extension point supports the use of a custom ODA driver bridge.  An extension would specify the driver bridge that serves as an adapter to underlying data provider objects that do not implement the  org.eclipse.datatools.connectivity.oda interfaces.</p>
+<h6 class=CaptionFigColumn id=header>Description: </h6>This ODA consumer helper component's extension point supports the use of a custom ODA driver bridge.  An extension would specify a run-time driver bridge that extends the consumer helper, and/or servers as an adapter to underlying data provider objects that do not implement the org.eclipse.datatools.connectivity.oda interfaces.</p>
 <p><h6 class=CaptionFigColumn id=header>Configuration Markup:</h6></p>
 <p class=code id=dtd>&lt;!ELEMENT <a name="e.extension">extension</a> (<a href="#e.bridge">bridge</a>)&gt;</p>
 <p class=code id=dtd>&lt;!ATTLIST extension</p>
@@ -29,7 +29,7 @@
 Defines the custom driver bridge for a type of driver.</p>
 <br>
 <ul class=ConfigMarkup id=attlistDesc>
-<li><b>driverType</b> - The type of an underlying data driver for which an ODA driver bridge is applied.  It can be either the interface name or class name of the driver.</li>
+<li><b>driverType</b> - The type of an underlying data driver for which an ODA driver bridge is applied.  It can be either the interface name or class name of the driver.  A bridge defined for a driver class takes precedence over those defined for a driver's interface(s).</li>
 <li><b>bridgeId</b> - The ODA data source element id of the driver bridge extension that adapts the ODA runtime interfaces for a data driver, and implements the ODA data source extension point <i>org.eclipse.datatools.connectivity.oda.dataSource</i>.
 <br>Its driver bridge extension's <i>driverClass</i> is the concrete class that serves as the custom bridge's entry point.</li>
 </ul>
