--- a/plugins/org.eclipse.datatools.connectivity.oda.design/about.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.design/about.html
@@ -14,11 +14,12 @@ under the terms and conditions of the Eclipse Public License Version 1.0
 href="http://www.eclipse.org/legal/epl-v10.html">http://www.eclipse.org/legal/epl-v10.html</A>. 
 For purposes of the EPL, "Program" will mean the Content.<P>
 
-If you did not receive this Content directly from the Eclipse Foundation, 
+<p>If you did not receive this Content directly from the Eclipse Foundation, 
 the Content is being redistributed by another party ("Redistributor") and different terms and conditions may apply 
 to your use of any object code in the Content. 
 Check the Redistributor's license that was provided with the Content. 
 If no such license exists, contact the Redistributor. Unless otherwise indicated below, the terms and conditions of the EPL 
-still apply to any source code in the Content. <p>
+still apply to any source code in the Content and such source code may be 
+obtained at <a href="/">http://www.eclipse.org</a>.</p>
 
 </BODY></HTML>
