--- a/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.profile/src/org/eclipse/datatools/connectivity/oda/profile/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2004, 2006 Actuate Corporation.
+ * Copyright (c) 2005, 2006 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,14 +20,11 @@
 </head>
 <body bgcolor="white">
 
-[<b>Non-API</b>] An ODA consumer helper package that assists an ODA consumer application 
-to manage the diverse capabilities and behavior of individual ODA data drivers.
+[<b>Non-API</b>] Provides common implementation of 
+the Connection Profile framework's interface for ODA custom designers.
+
 <p>
-It implements the ODA run-time interfaces, and encapsulates the application logic to 
-manage the interaction between an ODA consumer and the 
-ODA providers.
-<p>
-Note: <i>The implementation class methods are <b>not</b> public APIs.  
+Note: <i>The implementation classes are <b>not</b> public APIs.  
 <br>Backward compatibility support in future releases is not guaranteed.</i>
 
 <!-- Put @see and @since tags down here. -->
