--- a/plugins/org.eclipse.datatools.connectivity.oda/schema-doc/org_eclipse_datatools_connectivity_oda_datasource.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/schema-doc/org_eclipse_datatools_connectivity_oda_datasource.html
@@ -3,7 +3,7 @@
 <HEAD><meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <title>Open Data Access</title>
 <style>@import url("file:/D:/Lang/eclipse_32/plugins/org.eclipse.sdk_3.2.0.v20060605/book.css");</style>
-<style>@import url("file:/D:/Lang/eclipse_32/configuration/org.eclipse.osgi/bundles/69/1/.cp/schema.css");</style>
+<style>@import url("file:/D:/Lang/eclipse_32/configuration/org.eclipse.osgi/bundles/129/1/.cp/schema.css");</style>
 </HEAD>
 <BODY>
 <H1><CENTER>Open Data Access</CENTER></H1>
@@ -15,7 +15,7 @@
 <p>
 <h6 class=CaptionFigColumn id=header>Description: </h6>This extension point is used to support the extension of design-time and run-time data source access by a data application.  Each extension must implement the Open Data Access (ODA) Java runtime interfaces defined in the <i>org.eclipse.datatools.connectivity.oda</i> package.</p>
 <p><h6 class=CaptionFigColumn id=header>Configuration Markup:</h6></p>
-<p class=code id=dtd>&lt;!ELEMENT <a name="e.extension">extension</a> (<a href="#e.dataSource">dataSource</a> , <a href="#e.dataSet">dataSet</a>+)&gt;</p>
+<p class=code id=dtd>&lt;!ELEMENT <a name="e.extension">extension</a> (<a href="#e.dataSource">dataSource</a> , <a href="#e.dataSet">dataSet</a>+ , <a href="#e.relationship">relationship</a>?)&gt;</p>
 <p class=code id=dtd>&lt;!ATTLIST extension</p>
 <p class=code id=dtdAttlist>point&nbsp;CDATA #REQUIRED<p class=code id=dtdAttlist>id&nbsp;&nbsp;&nbsp;&nbsp;CDATA #IMPLIED<p class=code id=dtdAttlist>name&nbsp;&nbsp;CDATA #IMPLIED&gt;</p>
 <p></p>
@@ -29,7 +29,7 @@
 The definition of a type of ODA data source extension for use at design-time and run-time.</p>
 <br>
 <ul class=ConfigMarkup id=attlistDesc>
-<li><b>id</b> - A fully qualified ID that uniquely identifies this ODA data source extension within an ODA consumer application's environment. If a data source designer extension (TBD) for this ODA driver is available, the value of this attribute must match that of the designer extension's <i>id</i> attribute in its data source element.</li>
+<li><b>id</b> - A fully qualified ID that uniquely identifies this ODA data source extension within an ODA consumer application's environment. If a data source designer extension (that implements <i>org.eclipse.datatools.connectivity.oda.design.ui.dataSource</i> extension point) is available for this ODA driver, the value of this attribute must match that of the designer extension's <i>id</i> attribute in its data source element.</li>
 <li><b>odaVersion</b> - Version of the ODA interfaces for which this driver is developed. This element is required and should take the format of Major.Minor or Major.Minor.Service (e.g. 3.0 or 2.0.1).</li>
 <li><b>defaultDisplayName</b> - The display name of the ODA data source extension.  Its value can be localized by using the plugin.properties mechanism.  Default to the extension id if no display name is specified.
 It can be used by an ODA consumer application's designer tool in displaying a list of ODA data source extensions, when they do not have a corresponding data source editor (data source UI extension point).</li>
@@ -127,7 +127,7 @@ A property whose value can be edited at design-time using an ODA consumer applic
 <li><b>canInherit</b> - Reserved.</li>
 <li><b>defaultValue</b> - Default value of the property, if no property value is set.</li>
 <li><b>isEncryptable</b> - A flag indicating whether this property value is encryptable.  Setting it to "true" indicates to an ODA consumer application that this property's value should be encrypted.</li>
-<li><b>allowsEmptyValueAsNull</b> - A flag that indicates whether an empty value of this property can be treated as a null value.  This attribute setting applies when passing a property value to this ODA runtime driver.  This attribute may be used to accommodate the case where a property value's input control does not provide the means to specify a null value.</li>
+<li><b>allowsEmptyValueAsNull</b> - A flag that indicates whether an empty value of this property can be treated as a null value.  Default value is true.  This attribute setting applies when an ODA consumer passes the property's value to this ODA runtime driver.  This optional attribute may be used to accommodate the case where a property value's input control does not provide the means to specify a null value.</li>
 </ul>
 <br><p class=code id=dtd>&lt;!ELEMENT <a name="e.propertyGroup">propertyGroup</a> (<a href="#e.property">property</a>+)&gt;</p>
 <p class=code id=dtd>&lt;!ATTLIST propertyGroup</p>
@@ -168,7 +168,22 @@ Choice of property values.</p>
 <p class=ConfigMarkup id=elementDesc>
 A collection of property definitions in a data source extension or its supported data set definitions.</p>
 <br><br>
-<h6 class=CaptionFigColumn id=header>Examples: </h6><p>
+<p class=code id=dtd>&lt;!ELEMENT <a name="e.relationship">relationship</a> EMPTY&gt;</p>
+<p class=code id=dtd>&lt;!ATTLIST relationship</p>
+<p class=code id=dtdAttlist>type&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(replacedBy) <p class=code id=dtdAttlist>relatedDataSourceId&nbsp;CDATA #REQUIRED&gt;</p>
+<p></p>
+<p class=ConfigMarkup id=elementDesc>
+An optional element to specify the relationship of this dataSource extension.</p>
+<br>
+<ul class=ConfigMarkup id=attlistDesc>
+<li><b>type</b> - The type of relationship that this extension has with the <i>relatedDataSourceId</i> extension.
+Valid value(s) are: 
+<br>* "replacedBy" - this dataSource extension is deprecated and replaced by that of <i>relatedDataSourceId</i>.  This setting is for consumption by an ODA host, and does not automatically affect the behavior of the ODA framework.  It is up to an ODA host to apply as appropriate, e.g. to migrate its reference of a deprecated extension, and to control which ODA extension to use at runtime.
+<br>* (Additional types are TBD.)</li>
+<li><b>relatedDataSourceId</b> - The fully qualified ID of the related ODA data source extension.
+Its value must match that of the <i>dataSource.id</i> attribute defined in another ODA driver's <i>org.eclipse.datatools.connectivity.oda.dataSource</i> extension.</li>
+</ul>
+<br><h6 class=CaptionFigColumn id=header>Examples: </h6><p>
    <pre>
    <p class=code id=tag>&lt;extension
          point=<p class=code id=cstring>&quot;org.eclipse.datatools.connectivity.oda.dataSource&quot;</p><p class=code id=tag>&gt;</p>
