[162297] Updated Javadoc comments

--- a/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda/src/org/eclipse/datatools/connectivity/oda/nls/package.html
@@ -20,22 +20,11 @@
 </head>
 <body bgcolor="white">
 
-[<b>Non-API</b>] Provides a trace logging utility to an 
-ODA runtime extension.
-<p>
-The package provides a default implementation of trace logging framework,
-which does not impose dependency on other packages or specific platforms.
-<br>It may serve to encapsulate the type of logging framework used, 
-by simply extending its implementation.  
-Each ODA runtime driver is then not required to make any direct changes when
-switching to another logging framework. 
-<p> 
-The use of this logging utility is purely optional.  
-An ODA runtime driver extension may directly use its driver-specific logging 
-utility, as appropriate.
+[<b>Non-API</b>] Contains internal implementation of internationalization and localization features.
+<br>
 
 <!-- Put @see and @since tags down here. -->
-@since 1.0
+@since 3.0
 
 </body>
 </html>
