--- a/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/util/manifest/package.html
+++ b/plugins/org.eclipse.datatools.connectivity.oda.consumer/src/org/eclipse/datatools/connectivity/oda/consumer/util/manifest/package.html
@@ -4,7 +4,7 @@
 <!--
 
  *************************************************************************
- * Copyright (c) 2005, 2006 Actuate Corporation.
+ * Copyright (c) 2006 Actuate Corporation.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -20,8 +20,16 @@
 </head>
 <body bgcolor="white">
 
-[<b>Non-API</b>] Contains internal implementation of internationalization and localization features.
+[<b>Provisional</b>] Provides a utility component for accessing the content of an 
+ODA consumer extension's manifest.
 <br>
+It can be used by an ODA consumer to discover the plug-in extension configuration.
+<p>
+The utility's initial entry point is the singleton <code>ExtensionExplorer</code>.
+It provides the service to explore all the static
+ODA consumer extensions, and access to each 
+extension's configuration information specified 
+in its plug-in manifest file.
 
 <!-- Put @see and @since tags down here. -->
 @since 3.0
